--- a/index.html
+++ b/index.html
@@ -2,30 +2,149 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
 </head>
-<body>
-  <div class="page">
-    <header class="header">
-
+<body class='page'>
+    <header class="header flex-row">
+      <div class='logo logo_place_header'></div>
+      <p class='header__title'>Научиться учиться</p>
+      <p class='header__subtitle'>Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href=# class='header__link'>Узнать→</a></p>
+      <img src='images/header-image.png' alt='Опять двойка' class='header__main-illustration'><img>
+      <div class='header__square-pic'></div>
     </header>
     <main class="content">
-      <section class="description">
+      <section class="description flex-column">
+        <div class='description__two-columns flex-row'>
+          <p class='two-columns__brief'>Главные проблемы в обучении</p>
+          <div class=two-columns__text-right>
+            <p class='two-columns__paragraph list'>Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class='two-columns__paragraph list'><span class='span-accent'>Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class='two-columns__paragraph list'>Конкретные техники и упражения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          </div>
+          </div>
       </section>
 
-      <section class="digits">
+      <section class="digits flex-column">
+        <h1 class='digits__title'>Цифры и факты</h1>
+        <h2 class='digits__subtitle'>Про учёбу и мозг</h2>
+        <div class='table'>
+          <div class='table__cell'>
+            <h3 class='table__heading'>86 миллиардов</h3>
+            <p class='table__text'>Число нейронов в мозге человека</p>
+          </div>
+          <div class='table__cell'>
+            <h3 class='table__heading'>2,1 миллиарда</h3>
+            <p class='table__text'>Число нуждающихся в повышенной квалификации</p>
+            <p class='table__text'>Всемирный банк</p>
+          </div>
+          <div class='table__cell'>
+            <h3 class='table__heading'>1000 терабайт</h3>
+            <p class='table__text'>Объём памяти человека</p>
+          </div>
+          <div class='table__cell'>
+            <h3 class='table__heading'>500 триллионов</h3>
+            <p class='table__text'>Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </div>
+          <div class='table__cell'>
+            <h3 class='table__heading'>420 миллионов</h3>
+            <p class='table__text'>Число взрослых людей моложе 25 лет, не имеющих образование для трудоустройства</p>
+            <p class='table__text'>Всемирный банк</p>
+          </div>
+          <div class='table__cell'>
+            <h3 class='table__heading'>17-20 лет</h3>
+            <p class='table__text'>Пик обучаемости</p>
+          </div>
+          <div class='table__cell'>
+            <h3 class='table__heading'>1885 год</h3>
+            <p class='table__text'>Открытие кривой забвения</p>
+          </div>
+          <div class='table__cell'>
+            <h3 class='table__heading'>1889 год</h3>
+            <p class='table__text'>Открытие условного рефлекса</p>
+          </div>
+        </div>
       </section>
 
-      <section class="feinman">
+      <section class="feynman flex-column">
+        <h1 class='feynman__title'>Метод Фейнмана</h1>
+        <h2 class='feynman__subtitle'>Выучить и не забыть</h2>
+        <a class='feynman__link' href='#'>Подробнее →</a>
       </section>
 
-      <section class="kaufman">
+      <section class="kaufman flex-column">
+        <h1 class='section-title section-title_theme_dark'>Принципы обучения</h1>
+        <h2 class='section-subtitle section-subtitle_theme_dark'>от Джошуа Кауфмана</h2>
+        <div class='kaufman__triangle'></div>
+        <div class='table table_theme_dark'>
+          <div class='table__cell table__cell_theme_dark'>
+            <h3 class='table__heading table__heading_theme_dark'>1</h3>
+            <p class='table__text table__text_theme_dark'>Выберите привлекательный проект.</p>
+          </div>
+          <div class='table__cell table__cell_theme_dark'>
+            <h3 class='table__heading table__heading_theme_dark'>2</h3>
+            <p class='table__text table__text_theme_dark'>Сосредоточьтесь на каком-то одном навыке.</p>
+          </div>
+          <div class='table__cell table__cell_theme_dark'>
+            <h3 class='table__heading table__heading_theme_dark'>3</h3>
+            <p class='table__text table__text_theme_dark'>Определите целевой урвоень мастерства.</p>
+          </div>
+          <div class='table__cell table__cell_theme_dark'>
+            <h3 class='table__heading table__heading_theme_dark'>4</h3>
+            <p class='table__text table__text_theme_dark'>Разбейте навык на элементы.</p>
+          </div>
+          <div class='table__cell table__cell_theme_dark'>
+            <h3 class='table__heading table__heading_theme_dark'>5</h3>
+            <p class='table__text table__text_theme_dark'>Приготовьте всё необходимое для занятий.</p>
+          </div>
+          <div class='table__cell table__cell_theme_dark'>
+            <h3 class='table__heading table__heading_theme_dark'>6</h3>
+            <p class='table__text table__text_theme_dark'>Устраниете препятствия для занятий.</p>
+          </div>
+          <div class='table__cell table__cell_theme_dark'>
+            <h3 class='table__heading table__heading_theme_dark'>7</h3>
+            <p class='table__text table__text_theme_dark'>Выделите специальное время для занятий.</p>
+          </div>
+          <div class='table__cell table__cell_theme_dark'>
+            <h3 class='table__heading table__heading_theme_dark'>8</h3>
+            <p class='table__text table__text_theme_dark'>Создайте быстрые петли обратной связи.</p>
+          </div>
+          <div class='table__cell table__cell_theme_dark'>
+            <h3 class='table__heading table__heading_theme_dark'>9</h3>
+            <p class='table__text table__text_theme_dark'>Занимайтесь по расписанию, короткими интесивными интервалами.</p>
+          </div>
+          <div class='table__cell table__cell_theme_dark'>
+            <h3 class='table__heading table__heading_theme_dark'>10</h3>
+            <p class='table__text table__text_theme_dark'>Уделяйте внимание количеству и скорости.</p>
+          </div>
+        </div>
       </section>
     </main>
-    <footer class="footer">
-
+    <footer class="footer flex-column">
+      <div class='footer__columns flex-row'>
+        <div class='footer__column footer__column_content_copyright'>
+          <div class='logo logo_place_footer'></div>
+          <p class="footer__author">&copy;Виктор Абанькин</p>
+        </div>
+        <div class='footer__column footer__column_content_info'>
+          <h4 class="footer__column-heading">О практикуме</h4>
+          <ul class="footer__column-links list">
+            <li><a href=# class='footer__link'>Главная</a></li>
+            <li></li><a href=# class='footer__link'>Концепция</a></li>
+            <li></li><a href=# class='footer__link'>Наставники</a></li>
+          </ul>
+        </div>
+        <div class='footer__column footer__column_content_social'>
+          <h4 class="footer__column-heading">Соцсети</h4>
+          <ul class="footer__column-links list">
+            <li><a href=# class='footer__link flex-row'><img class=footer__social-icon src='images/facebook_color_white.svg' alt="FB">Facebook</a></li>
+            <li><a href=# class='footer__link flex-row'><img class=footer__social-icon src='images/vk_color_white.svg' alt='VK'>Вконтакте</a></li>
+            <li><a href=# class='footer__link flex-row'><img class=footer__social-icon src='images/instagram_color_white.svg' alt="Inst">Instagram</a></li>
+          </ul>
+        </div>
+    </div>
     </footer>
-  </div>
 </body>
 </html>
