Исправления после первого ревью

--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
   <title>Научиться учиться</title>
 </head>
 <body class='page'>
-    <header class="header flex-row">
+    <header class="header">
       <div class='logo logo_place_header'></div>
-      <p class='header__title'>Научиться учиться</p>
+      <h1 class='header__title'>Научиться учиться</h1>
       <p class='header__subtitle'>Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href=# class='header__link'>Узнать→</a></p>
-      <img src='images/header-image.png' alt='Опять двойка' class='header__main-illustration'><img>
+      <img  src='images/header-image.png' alt='Опять двойка' class='header__main-illustration'><img src='images/header-image.png' alt='Опять двойка' class='header__main-illustration'>
       <div class='header__square-pic'></div>
     </header>
     <main class="content">
-      <section class="description flex-column">
-        <div class='description__two-columns flex-row'>
+      <section class="description">
+        <div class='two-columns'>
           <p class='two-columns__brief'>Главные проблемы в обучении</p>
-          <div class=two-columns__text-right>
-            <p class='two-columns__paragraph list'>Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class='two-columns__paragraph list'><span class='span-accent'>Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-            <p class='two-columns__paragraph list'>Конкретные техники и упражения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          <div class=two-columns__main-text>
+            <p class='two-columns__paragraph'>Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class='two-columns__paragraph'><span class='span-accent'>Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class='two-columns__paragraph'>Конкретные техники и упражения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
           </div>
       </section>
 
-      <section class="digits flex-column">
-        <h1 class='digits__title'>Цифры и факты</h1>
-        <h2 class='digits__subtitle'>Про учёбу и мозг</h2>
+      <section class="digits">
+        <h2 class='digits__title'>Цифры и факты</h2>
+        <p class='digits__subtitle'>Про учёбу и мозг</p>
         <div class='table'>
           <div class='table__cell'>
             <h3 class='table__heading'>86 миллиардов</h3>
@@ -68,15 +68,15 @@
         </div>
       </section>
 
-      <section class="feynman flex-column">
-        <h1 class='feynman__title'>Метод Фейнмана</h1>
-        <h2 class='feynman__subtitle'>Выучить и не забыть</h2>
+      <section class="feynman">
+        <h2 class='feynman__title'>Метод Фейнмана</h2>
+        <p class='feynman__subtitle'>Выучить и не забыть</p>
         <a class='feynman__link' href='#'>Подробнее →</a>
       </section>
 
-      <section class="kaufman flex-column">
-        <h1 class='section-title section-title_theme_dark'>Принципы обучения</h1>
-        <h2 class='section-subtitle section-subtitle_theme_dark'>от Джошуа Кауфмана</h2>
+      <section class="kaufman">
+        <h2 class='section-title section-title_theme_dark'>Принципы обучения</h2>
+        <p class='section-subtitle section-subtitle_theme_dark'>от Джошуа Кауфмана</p>
         <div class='kaufman__triangle'></div>
         <div class='table table_theme_dark'>
           <div class='table__cell table__cell_theme_dark'>
@@ -122,27 +122,27 @@
         </div>
       </section>
     </main>
-    <footer class="footer flex-column">
-      <div class='footer__columns flex-row'>
+    <footer class="footer">
+      <div class='footer__columns'>
         <div class='footer__column footer__column_content_copyright'>
           <div class='logo logo_place_footer'></div>
           <p class="footer__author">&copy;Виктор Абанькин</p>
         </div>
         <div class='footer__column footer__column_content_info'>
           <h4 class="footer__column-heading">О практикуме</h4>
-          <ul class="footer__column-links list">
-            <li><a href=# class='footer__link'>Главная</a></li>
-            <li></li><a href=# class='footer__link'>Концепция</a></li>
-            <li></li><a href=# class='footer__link'>Наставники</a></li>
-          </ul>
+          <nav class="footer__column-links">
+            <a href=# class='footer__link'>Главная</a>
+            <a href=# class='footer__link'>Концепция</a>
+            <a href=# class='footer__link'>Наставники</a>
+          </nav>
         </div>
         <div class='footer__column footer__column_content_social'>
           <h4 class="footer__column-heading">Соцсети</h4>
-          <ul class="footer__column-links list">
-            <li><a href=# class='footer__link flex-row'><img class=footer__social-icon src='images/facebook_color_white.svg' alt="FB">Facebook</a></li>
-            <li><a href=# class='footer__link flex-row'><img class=footer__social-icon src='images/vk_color_white.svg' alt='VK'>Вконтакте</a></li>
-            <li><a href=# class='footer__link flex-row'><img class=footer__social-icon src='images/instagram_color_white.svg' alt="Inst">Instagram</a></li>
-          </ul>
+          <nav class="footer__column-links">
+            <a href=# class='footer__link'><img class=footer__social-icon src='images/facebook_color_white.svg' alt="FB">Facebook</a>
+            <a href=# class='footer__link'><img class=footer__social-icon src='images/vk_color_white.svg' alt='VK'>Вконтакте</a>
+            <a href=# class='footer__link'><img class=footer__social-icon src='images/instagram_color_white.svg' alt="Inst">Instagram</a>
+          </nav>
         </div>
     </div>
     </footer>
