--- a/index.html
+++ b/index.html
@@ -6,22 +6,23 @@
   <link rel="stylesheet" href="styles/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class='page'>
     <header class="header">
       <div class='logo logo_place_header'></div>
       <h1 class='header__title'>Научиться учиться</h1>
       <p class='header__subtitle'>Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href=# class='header__link'>Узнать→</a></p>
-      <img  src='images/header-image.png' alt='Опять двойка' class='header__main-illustration'><img src='images/header-image.png' alt='Опять двойка' class='header__main-illustration'>
+      <img  src='images/header-image.png' alt='Опять двойка' class='header__main-illustration'>
       <div class='header__square-pic'></div>
     </header>
     <main class="content">
       <section class="description">
         <div class='two-columns'>
-          <p class='two-columns__brief'>Главные проблемы в обучении</p>
+          <h3 class='two-columns__brief'>Главные проблемы в обучении</h3>
           <div class=two-columns__main-text>
             <p class='two-columns__paragraph'>Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class='two-columns__paragraph'><span class='span-accent'>Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class='two-columns__paragraph'><span class='two-columns__span-accent'>Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
             <p class='two-columns__paragraph'>Конкретные техники и упражения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
           </div>
@@ -131,17 +132,21 @@
         <div class='footer__column footer__column_content_info'>
           <h4 class="footer__column-heading">О практикуме</h4>
           <nav class="footer__column-links">
-            <a href=# class='footer__link'>Главная</a>
-            <a href=# class='footer__link'>Концепция</a>
-            <a href=# class='footer__link'>Наставники</a>
+            <ul class='footer__links-list'>
+              <li><a href=# class='footer__link'>Главная</a></li>
+              <li><a href=# class='footer__link'>Концепция</a></li>
+              <li><a href=# class='footer__link'>Наставники</a></li>
+           </ul>
           </nav>
         </div>
         <div class='footer__column footer__column_content_social'>
           <h4 class="footer__column-heading">Соцсети</h4>
           <nav class="footer__column-links">
-            <a href=# class='footer__link'><img class=footer__social-icon src='images/facebook_color_white.svg' alt="FB">Facebook</a>
-            <a href=# class='footer__link'><img class=footer__social-icon src='images/vk_color_white.svg' alt='VK'>Вконтакте</a>
-            <a href=# class='footer__link'><img class=footer__social-icon src='images/instagram_color_white.svg' alt="Inst">Instagram</a>
+            <ul class='footer__links-list'>
+              <li><a href=# class='footer__link'><img class=footer__social-icon src='images/facebook_color_white.svg' alt="FB">Facebook</a></li>
+              <li><a href=# class='footer__link'><img class=footer__social-icon src='images/vk_color_white.svg' alt='VK'>Вконтакте</a></li>
+              <li><a href=# class='footer__link'><img class=footer__social-icon src='images/instagram_color_white.svg' alt="Inst">Instagram</a></li>
+            </ul>
           </nav>
         </div>
     </div>
