--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
   <link rel="stylesheet" href="styles/style.css">
@@ -127,7 +126,7 @@
       <div class='footer__columns'>
         <div class='footer__column footer__column_content_copyright'>
           <div class='logo logo_place_footer'></div>
-          <p class="footer__author">&copy;Виктор Абанькин</p>
+          <p class="footer__author">&copy;Никита Немыкин</p>
         </div>
         <div class='footer__column footer__column_content_info'>
           <h4 class="footer__column-heading">О практикуме</h4>
