--- a/index.html
+++ b/index.html
@@ -2,18 +2,38 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="vendor/normalize.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="blocks/description/description.css">
+  <link rel="stylesheet" href="blocks/digits/digits.css">
+  <link rel="stylesheet" href="blocks/feynman/feynman.css">
+  <link rel="stylesheet" href="blocks/footer/footer.css">
+  <link rel="stylesheet" href="blocks/header/header.css">
+  <link rel="stylesheet" href="blocks/kaufman/kaufman.css">
+  <link rel="stylesheet" href="blocks/logo/logo.css">
+  <link rel="stylesheet" href="blocks/root/root.css">
+  <link rel="stylesheet" href="blocks/section-subtitle/section-subtitle.css">
+  <link rel="stylesheet" href="blocks/section-title/section-title.css">
+  <link rel="stylesheet" href="blocks/table/table.css">
+  <link rel="stylesheet" href="blocks/two-columns/two-columns.css">
+  <link rel="stylesheet" href="blocks/techniques/techniques.css">
+  <link rel="stylesheet" href="blocks/video/video.css">
+  <link rel="stylesheet" href="blocks/oakley/oakley.css">
+  <link rel="stylesheet" href="blocks/khan/khan.css">
+  <link rel="stylesheet" href="blocks/resources/resources.css">
+  <link rel="stylesheet" href="blocks/rotation/rotation.css">
+  <link rel="stylesheet" href="blocks/techniques/techniques.css">
+  <link rel="stylesheet" href="blocks/cards/cards.css">
+
 </head>
-<body class='page'>
+<body class='root'>
     <header class="header">
       <div class='logo logo_place_header'></div>
       <h1 class='header__title'>Научиться учиться</h1>
-      <p class='header__subtitle'>Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href=# class='header__link'>Узнать→</a></p>
+      <p class='header__subtitle'>Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href=# class='header__link'>Узнать&rarr;</a></p>
       <img  src='images/header-image.png' alt='Опять двойка' class='header__main-illustration'>
-      <div class='header__square-pic'></div>
+      <div class='header__square-pic rotation'></div>
     </header>
     <main class="content">
       <section class="description">
@@ -25,6 +45,63 @@
             <p class='two-columns__paragraph'>Конкретные техники и упражения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
           </div>
+      </section>
+
+      <section class='teсhniques'>
+        <h2 class="section-title section-title_theme_techniques">Техники обучения</h2>
+        <h3 class='section-subtitle section-subtitle_theme_techniques'>Пять практик от Барбары Оакли</h3>
+        <div class='cards'>
+          <div class='cards__item'>
+            <img src='images/cards-attention.png' alt="Внимание" class="cards__image">
+            <h4 class="cards__title">Два вида внимания</h4>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </div>
+          <div class='cards__item'>
+            <img src='images/cards-recall.png' alt="Вспоминание" class="cards__image">
+            <h4 class="cards__title">Recall</h4>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </div>
+          <div class='cards__item'>
+            <img src='images/cards-interliving.png' alt="Интерливинг" class="cards__image">
+            <h4 class="cards__title">Интерливинг</h4>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </div>
+          <div class='cards__item'>
+            <img src='images/cards-question.png' alt="Вопрос" class="cards__image">
+            <h4 class="cards__title">Вопросы</h4>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </div>
+          <div class='cards__item'>
+            <img src='images/cards-competence.png' alt="Иллюзия компетентности" class="cards__image">
+            <h4 class="cards__title">Иллюзия компетентности</h4>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          
+          </div>
+        </div>
+      </section>
+
+      <section class="video">
+        <h2 class="section-title section-title_theme_techniques">Видео нa TED</h2>
+        <h3 class='section-subtitle section-subtitle_theme_techniques'>Для тех, кто любит прокрастинировать</h3>
+        <div class='video__iframes'>
+          <iframe class='video__iframe' width="513" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class='video__iframe' width="513" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </section>
+
+      <section class='oakley'>
+        <div class='two-columns'>
+          <h3 class='two-columns__brief'>История Барбары Оакли.</h3>
+          <div class=two-columns__main-text>
+            <p class='two-columns__paragraph'>С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+          </div>
+          </div>
+      </section>
+
+      <section class="feynman">
+        <h2 class='feynman__title'>Метод Фейнмана</h2>
+        <p class='feynman__subtitle'>Выучить и не забыть</p>
+        <a class='feynman__link' href='#'>Подробнее →</a>
       </section>
 
       <section class="digits">
@@ -68,16 +145,24 @@
         </div>
       </section>
 
-      <section class="feynman">
-        <h2 class='feynman__title'>Метод Фейнмана</h2>
-        <p class='feynman__subtitle'>Выучить и не забыть</p>
-        <a class='feynman__link' href='#'>Подробнее →</a>
+      <section class='khan'>
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__book-container">Весь мир — школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img src='images/khan-book.jpg' class="khan__book-pic" alt="Книга">
+            <a href=# class="khan__buy-link">Купить книгу&rarr;</a>
+          </div>
+        </div>
       </section>
 
       <section class="kaufman">
         <h2 class='section-title section-title_theme_dark'>Принципы обучения</h2>
-        <p class='section-subtitle section-subtitle_theme_dark'>от Джошуа Кауфмана</p>
-        <div class='kaufman__triangle'></div>
+        <h3 class='section-subtitle section-subtitle_theme_dark'>от Джошуа Кауфмана</h3>
+        <div class='kaufman__triangle rotation'></div>
         <div class='table table_theme_dark'>
           <div class='table__cell table__cell_theme_dark'>
             <h3 class='table__heading table__heading_theme_dark'>1</h3>
@@ -121,6 +206,18 @@
           </div>
         </div>
       </section>
+
+      <section class="resources">
+        <h2 class="section-title section-title_theme_techniques">Полезные ресурсы</h2>
+        <h3 class='section-subtitle section-subtitle_theme_techniques'>Больше материалов о техниках и лайфхаках обучения</h3>
+        <div class='resources__logo-zone'>
+          <img src="images/logo/resources-arzamas.svg" alt="Арзамас" class="resources__logo">
+          <img src="images/logo/resources-n1.svg" alt="N+1" class="resources__logo">
+          <img src="images/logo/resources-strelka.svg" alt="Strelka" class="resources__logo">
+          <img src="images/logo/resources-polka.svg" alt="Полка" class="resources__logo">
+        </div>
+      </section>
+
     </main>
     <footer class="footer">
       <div class='footer__columns'>
