--- a/index.html
+++ b/index.html
@@ -5,26 +5,8 @@
   <link rel="stylesheet" href="vendor/normalize.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="blocks/description/description.css">
-  <link rel="stylesheet" href="blocks/digits/digits.css">
-  <link rel="stylesheet" href="blocks/feynman/feynman.css">
-  <link rel="stylesheet" href="blocks/footer/footer.css">
-  <link rel="stylesheet" href="blocks/header/header.css">
-  <link rel="stylesheet" href="blocks/kaufman/kaufman.css">
-  <link rel="stylesheet" href="blocks/logo/logo.css">
-  <link rel="stylesheet" href="blocks/root/root.css">
-  <link rel="stylesheet" href="blocks/section-subtitle/section-subtitle.css">
-  <link rel="stylesheet" href="blocks/section-title/section-title.css">
-  <link rel="stylesheet" href="blocks/table/table.css">
-  <link rel="stylesheet" href="blocks/two-columns/two-columns.css">
-  <link rel="stylesheet" href="blocks/techniques/techniques.css">
-  <link rel="stylesheet" href="blocks/video/video.css">
-  <link rel="stylesheet" href="blocks/oakley/oakley.css">
-  <link rel="stylesheet" href="blocks/khan/khan.css">
-  <link rel="stylesheet" href="blocks/resources/resources.css">
-  <link rel="stylesheet" href="blocks/rotation/rotation.css">
-  <link rel="stylesheet" href="blocks/techniques/techniques.css">
-  <link rel="stylesheet" href="blocks/cards/cards.css">
+
+  <link rel="stylesheet" href="page/index.css">
 
 </head>
 <body class='root'>
@@ -36,6 +18,7 @@
       <div class='header__square-pic rotation'></div>
     </header>
     <main class="content">
+
       <section class="description">
         <div class='two-columns'>
           <h3 class='two-columns__brief'>Главные проблемы в обучении</h3>
@@ -48,44 +31,43 @@
       </section>
 
       <section class='teсhniques'>
-        <h2 class="section-title section-title_theme_techniques">Техники обучения</h2>
-        <h3 class='section-subtitle section-subtitle_theme_techniques'>Пять практик от Барбары Оакли</h3>
-        <div class='cards'>
-          <div class='cards__item'>
+        <h2 class="section-title">Техники обучения</h2>
+        <p class='section-subtitle'>Пять практик от Барбары Оакли</p>
+        <ul class='cards'>
+          <il class='cards__item'>
             <img src='images/cards-attention.png' alt="Внимание" class="cards__image">
             <h4 class="cards__title">Два вида внимания</h4>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
-          </div>
-          <div class='cards__item'>
+          </il>
+          <il class='cards__item'>
             <img src='images/cards-recall.png' alt="Вспоминание" class="cards__image">
             <h4 class="cards__title">Recall</h4>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
-          </div>
-          <div class='cards__item'>
+          </il>
+          <il class='cards__item'>
             <img src='images/cards-interliving.png' alt="Интерливинг" class="cards__image">
             <h4 class="cards__title">Интерливинг</h4>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
-          </div>
-          <div class='cards__item'>
+          </il>
+          <il class='cards__item'>
             <img src='images/cards-question.png' alt="Вопрос" class="cards__image">
             <h4 class="cards__title">Вопросы</h4>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
-          </div>
-          <div class='cards__item'>
+          </il>
+          <il class='cards__item'>
             <img src='images/cards-competence.png' alt="Иллюзия компетентности" class="cards__image">
             <h4 class="cards__title">Иллюзия компетентности</h4>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
-          
-          </div>
-        </div>
+          </il>
+        </ul>
       </section>
 
-      <section class="video">
+    <section class="video">
         <h2 class="section-title section-title_theme_techniques">Видео нa TED</h2>
-        <h3 class='section-subtitle section-subtitle_theme_techniques'>Для тех, кто любит прокрастинировать</h3>
+        <p class='section-subtitle section-subtitle_theme_techniques'>Для тех, кто любит прокрастинировать</p>
         <div class='video__iframes'>
-          <iframe class='video__iframe' width="513" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <iframe class='video__iframe' width="513" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class='video__iframe' src="https://www.youtube.com/embed/arj7oStGLkU" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class='video__iframe' src="https://www.youtube.com/embed/5MgBikgcWnY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </section>
 
@@ -148,8 +130,8 @@
       <section class='khan'>
         <div class="khan__container">
           <p class="khan__author">Салман Хан</p>
-          <h2 class="khan__book-container">Весь мир — школа</h2>
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
@@ -161,7 +143,7 @@
 
       <section class="kaufman">
         <h2 class='section-title section-title_theme_dark'>Принципы обучения</h2>
-        <h3 class='section-subtitle section-subtitle_theme_dark'>от Джошуа Кауфмана</h3>
+        <p class='section-subtitle section-subtitle_theme_dark'>от Джошуа Кауфмана</p>
         <div class='kaufman__triangle rotation'></div>
         <div class='table table_theme_dark'>
           <div class='table__cell table__cell_theme_dark'>
@@ -209,13 +191,13 @@
 
       <section class="resources">
         <h2 class="section-title section-title_theme_techniques">Полезные ресурсы</h2>
-        <h3 class='section-subtitle section-subtitle_theme_techniques'>Больше материалов о техниках и лайфхаках обучения</h3>
-        <div class='resources__logo-zone'>
-          <img src="images/logo/resources-arzamas.svg" alt="Арзамас" class="resources__logo">
-          <img src="images/logo/resources-n1.svg" alt="N+1" class="resources__logo">
-          <img src="images/logo/resources-strelka.svg" alt="Strelka" class="resources__logo">
-          <img src="images/logo/resources-polka.svg" alt="Полка" class="resources__logo">
-        </div>
+        <p class='section-subtitle section-subtitle_theme_techniques'>Больше материалов о техниках и лайфхаках обучения</p>
+        <ul class='resources__logo-zone'>
+          <il><a href='#'><img src="images/logo/resources-arzamas.svg" alt="Арзамас" class="resources__logo"></a></il>
+          <il><a href='#'><img src="images/logo/resources-n1.svg" alt="N+1" class="resources__logo"></a></il>
+          <il><a href='#'><img src="images/logo/resources-strelka.svg" alt="Strelka" class="resources__logo"></a></il>
+          <il><a href='#'><img src="images/logo/resources-polka.svg" alt="Полка" class="resources__logo"></a></il>
+        </ul>
       </section>
 
     </main>
