--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="vendor/normalize.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
 
@@ -34,31 +33,31 @@
         <h2 class="section-title">Техники обучения</h2>
         <p class='section-subtitle'>Пять практик от Барбары Оакли</p>
         <ul class='cards'>
-          <il class='cards__item'>
+          <li class='cards__item'>
             <img src='images/cards-attention.png' alt="Внимание" class="cards__image">
             <h4 class="cards__title">Два вида внимания</h4>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
-          </il>
-          <il class='cards__item'>
+          </li>
+          <li class='cards__item'>
             <img src='images/cards-recall.png' alt="Вспоминание" class="cards__image">
             <h4 class="cards__title">Recall</h4>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
-          </il>
-          <il class='cards__item'>
+          </li>
+          <li class='cards__item'>
             <img src='images/cards-interliving.png' alt="Интерливинг" class="cards__image">
             <h4 class="cards__title">Интерливинг</h4>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
-          </il>
-          <il class='cards__item'>
+          </li>
+          <li class='cards__item'>
             <img src='images/cards-question.png' alt="Вопрос" class="cards__image">
             <h4 class="cards__title">Вопросы</h4>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
-          </il>
-          <il class='cards__item'>
+          </li>
+          <li class='cards__item'>
             <img src='images/cards-competence.png' alt="Иллюзия компетентности" class="cards__image">
             <h4 class="cards__title">Иллюзия компетентности</h4>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
-          </il>
+          </li>
         </ul>
       </section>
 
@@ -190,13 +189,13 @@
       </section>
 
       <section class="resources">
-        <h2 class="section-title section-title_theme_techniques">Полезные ресурсы</h2>
-        <p class='section-subtitle section-subtitle_theme_techniques'>Больше материалов о техниках и лайфхаках обучения</p>
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class='section-subtitle'>Больше материалов о техниках и лайфхаках обучения</p>
         <ul class='resources__logo-zone'>
-          <il><a href='#'><img src="images/logo/resources-arzamas.svg" alt="Арзамас" class="resources__logo"></a></il>
-          <il><a href='#'><img src="images/logo/resources-n1.svg" alt="N+1" class="resources__logo"></a></il>
-          <il><a href='#'><img src="images/logo/resources-strelka.svg" alt="Strelka" class="resources__logo"></a></il>
-          <il><a href='#'><img src="images/logo/resources-polka.svg" alt="Полка" class="resources__logo"></a></il>
+          <li><a href='#'  class="resources__logo"><img src="images/logo/resources-arzamas.svg" alt="Арзамас" class="resources__logo"></a></li>
+          <li><a href='#' class="resources__logo"><img src="images/logo/resources-n1.svg" alt="N+1" class="resources__logo"></a></li>
+          <li><a href='#' class="resources__logo"><img src="images/logo/resources-strelka.svg" alt="Strelka" class="resources__logo"></a></li>
+          <li><a href='#' class="resources__logo"><img src="images/logo/resources-polka.svg" alt="Полка" class="resources__logo"></a></li>
         </ul>
       </section>
 
