--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
       </section>
 
     <section class="video">
-        <h2 class="section-title section-title_theme_techniques">Видео нa TED</h2>
-        <p class='section-subtitle section-subtitle_theme_techniques'>Для тех, кто любит прокрастинировать</p>
+        <h2 class="section-title">Видео нa TED</h2>
+        <p class='section-subtitle'>Для тех, кто любит прокрастинировать</p>
         <div class='video__iframes'>
           <iframe class='video__iframe' src="https://www.youtube.com/embed/arj7oStGLkU" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <iframe class='video__iframe' src="https://www.youtube.com/embed/5MgBikgcWnY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -192,10 +192,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class='section-subtitle'>Больше материалов о техниках и лайфхаках обучения</p>
         <ul class='resources__logo-zone'>
-          <li><a href='#'  class="resources__logo"><img src="images/logo/resources-arzamas.svg" alt="Арзамас" class="resources__logo"></a></li>
-          <li><a href='#' class="resources__logo"><img src="images/logo/resources-n1.svg" alt="N+1" class="resources__logo"></a></li>
-          <li><a href='#' class="resources__logo"><img src="images/logo/resources-strelka.svg" alt="Strelka" class="resources__logo"></a></li>
-          <li><a href='#' class="resources__logo"><img src="images/logo/resources-polka.svg" alt="Полка" class="resources__logo"></a></li>
+          <li><a href='#'><img src="images/logo/resources-arzamas.svg" alt="Арзамас" class="resources__logo"></a></li>
+          <li><a href='#'><img src="images/logo/resources-n1.svg" alt="N+1" class="resources__logo"></a></li>
+          <li><a href='#'><img src="images/logo/resources-strelka.svg" alt="Strelka" class="resources__logo"></a></li>
+          <li><a href='#'><img src="images/logo/resources-polka.svg" alt="Полка" class="resources__logo"></a></li>
         </ul>
       </section>
 
