--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
           <h4 class="footer__column-heading">Соцсети</h4>
           <nav class="footer__column-links">
             <ul class='footer__links-list'>
-              <li><a href=# class='footer__link'><img class=footer__social-icon src='images/facebook_color_white.svg' alt="FB">Facebook</a></li>
-              <li><a href=# class='footer__link'><img class=footer__social-icon src='images/vk_color_white.svg' alt='VK'>Вконтакте</a></li>
-              <li><a href=# class='footer__link'><img class=footer__social-icon src='images/instagram_color_white.svg' alt="Inst">Instagram</a></li>
+              <li><a href=# class='footer__link'><img class="footer__social-icon" src='images/facebook_color_white.svg' alt="FB">Facebook</a></li>
+              <li><a href=# class='footer__link'><img class="footer__social-icon" src='images/vk_color_white.svg' alt='VK'>Вконтакте</a></li>
+              <li><a href=# class='footer__link'><img class="footer__social-icon" src='images/instagram_color_white.svg' alt="Inst">Instagram</a></li>
             </ul>
           </nav>
         </div>
